Let moderators include a message when banning.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6569,6 +6569,11 @@ body:not(.gold) .allminus-link {
     display: none;
 }
 
+.ban-details > textarea {
+    display: block;
+    margin-left: 0;
+}
+
 .gold-accent h1,
 .gold-accent th {
     color: #6a4d00;
