Add "edit stylesheet" button to mod tools box.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6124,6 +6124,7 @@ dd { margin-left: 20px;  }
 .icon-menu .reddit-unmoderated:before,
 .icon-menu .reddit-moderators:before,
 .icon-menu .moderator-mail:before,
+.icon-menu .edit-stylesheet:before,
 .icon-menu .reddit-contributors:before,
 .icon-menu .reddit-modqueue:before,
 .giftgold a:before,
@@ -6170,6 +6171,9 @@ dd { margin-left: 20px;  }
 
 .icon-menu .reddit-edit:before {
     background-image: url(../reddit_edit.png); /* SPRITE */
+}
+.icon-menu .edit-stylesheet:before {
+    background-image: url(../css.png); /* SPRITE */
 }
 .icon-menu .reddit-traffic:before {
     background-image: url(../reddit_traffic.png); /* SPRITE */
