--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -62,7 +62,7 @@
   %if thing.show_unmarknsfw:
     <li>${ynbutton(_("un-nsfw"), _("unmarked"), "unmarknsfw")}</li>
   %endif
-  %if not getattr(thing, 'promoted', None) and c.site.link_flair_position and thing.show_flair:
+  %if not getattr(thing, 'promoted', None) and thing.show_flair:
     <li>
       <a class="flairselectbtn" href="javascript://void(0)">${_('flair')}</a>
       <div class="flairselector drop-choices"></div>
