--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -214,6 +214,10 @@
       &#32;
       ${_("the smaller the number, the faster your comments pages will load")}
     </span>
+    <p>
+    ${checkbox(_(u"show a dagger (†) on comments voted controversial"), "highlight_controversial")}
+    &#32;<span class="little gray">${_("(a controversial comment is one that's been both upvoted and downvoted significantly)")}</span>
+    </p>
     </td>
   </tr>
   <tr>
