Contest mode: add infobar to comment page

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1687,6 +1687,10 @@ body.with-listing-chooser.explore-page #header .pagename {
     vertical-align: middle;
 }
 
+.infobar strong {
+    font-weight: bold;
+}
+
 .infobar.red { 
     padding: 5px;
     background-color: #FFAEAE;
