Prefs: fix "don't show me sites..." label

--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -184,7 +184,7 @@
          'min_link_score')
          %>
       <p>
-      ${unsafe(_("don't show me sites with a score less than %(num)s") % dict(num = input))}
+      ${unsafe(_("don't show me submissions with a score less than %(num)s") % dict(num = input))}
       &#32;<span class="little gray">${_("(blank for none)")}</span>
       </p>
     </td>
