Subreddit: cleanup description in render key.

--- a/r2/r2/templates/subredditinfobar.html
+++ b/r2/r2/templates/subredditinfobar.html
@@ -66,8 +66,8 @@
     ${thing.flair_prefs}
   %endif
 
-  %if thing.sr.description:
-    ${thing.sr.description_usertext}
+  %if thing.description_usertext:
+    ${thing.description_usertext}
   %endif
 
   <div class="bottom">
