Add support for forced HTTPS with HSTS grants
Right now we only give HSTS grants when the user is on g.domain
so we can easily revoke the grant. We also track changes to the
forced HTTPS pref accross sessions and modify the user's session
cookies as needed.

--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -306,6 +306,16 @@
          </a>
        )
       </span>
+      <br>
+      ${checkbox(_("only use secure connections to communicate with reddit"), "force_https")}
+      &#32;
+      <span class="little gray">
+       (
+         <a href="//www.reddit.com/wiki/force_https">
+           ${_("details")}
+         </a>
+       )
+      </span>
     </td>
   </tr>
   %endif
