PromoCampaign: use target instead of sr_name.

--- a/r2/r2/templates/refundpage.html
+++ b/r2/r2/templates/refundpage.html
@@ -51,7 +51,7 @@
       </tr>
       <tr>
         <th>${_("target")}</th>
-        <td class="prefright">${thing.campaign.sr_name or "Frontpage"}</td>
+        <td class="prefright">${thing.campaign.target.pretty_name}</td>
       </tr>
       <tr>
         <th>${_("budget")}</th>
