Allow subreddits to opt-out of /r/all.

--- a/r2/r2/templates/createsubreddit.html
+++ b/r2/r2/templates/createsubreddit.html
@@ -270,7 +270,7 @@
                  %endif
           >
           <label for="allow_top">
-            ${_("allow this subreddit to be included in the default and trending lists")}
+            ${_("allow this subreddit to be included /r/all as well as the default and trending lists")}
           </label>
         </li>
         <li>
