Make sure deleted users show up as [deleted] in RSS feeds

--- a/r2/r2/templates/comment.xml
+++ b/r2/r2/templates/comment.xml
@@ -31,7 +31,11 @@
     author = _('[deleted]')
     body = _('[deleted]')
   else:
-    author = thing.author.name
+    if thing.author._deleted:
+        author = _('[deleted]')
+    else:
+        author = thing.author.name
+
     body = thing.body
 
   permalink = add_sr(thing.permalink, force_hostname = True)
