Make thumbnail URLs protocol-relative.
The thumbs domains are now SSL-capable. This de-duplication also brings
explicit width/height to .compact thumbnails and gets rid of a bug where
<img src="nsfw"> was generated in .compact.

--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -22,7 +22,7 @@
 
 <%!
    from r2.lib.template_helpers import get_domain
-   from r2.lib.template_helpers import media_https_if_secure
+   from r2.lib.template_helpers import make_url_protocol_relative
    from r2.lib.pages.things import LinkButtons
    from r2.lib.pages import WrappedUser
    from r2.lib.strings import Score, strings
@@ -240,7 +240,7 @@ ${parent.thing_css_class(what)} ${"over18" if thing.over_18 else ""} ${thing.vis
             else:
                 size_str = ""
         %>
-        <img src="${media_https_if_secure(thing.thumbnail)}" ${size_str} alt=""/>
+        <img src="${make_url_protocol_relative(thing.thumbnail)}" ${size_str} alt="">
     % endif
   </%call>
   %endif
