--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -73,6 +73,12 @@
     <link rel="shorturl" href="http://${thing.shortlink}"/>
   %endif
 
+  %if hasattr(thing, "og_data"):
+    %for (og_property, og_value) in thing.og_data.iteritems():
+      <meta property="og:${og_property}" content="${og_value}">
+    %endfor
+  %endif
+
   <link rel='icon' href="${static('icon.png')}" sizes="256x256" type="image/png" />
   <link rel='shortcut icon' href="${static('favicon.ico')}" type="image/x-icon" />
   <link rel='apple-touch-icon-precomposed' href="${static('icon-touch.png')}" />
